--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.462.0",
     "@aws-sdk/s3-request-presigner": "^3.462.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "minimist": "^1.2.8",
     "node-json-db": "^2.3.0",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/minimist": "^1.2.5"
   }
