--- a/keystore/package.json
+++ b/keystore/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "keystore",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,14 +8,13 @@
     "predev": "tsc",
     "start": "node dist/server.js",
     "build": "docker build -t wuguishifu/s3c .",
-    "prebuild": "tsc"
+    "prebuild": "tsc",
+    "launch": "docker run --name s3c-keystore -p 3114:8080 -d wuguishifu/s3c"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.462.0",
-    "@aws-sdk/s3-request-presigner": "^3.462.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "minimist": "^1.2.8",
