--- a/bucket-builder/package.json
+++ b/bucket-builder/package.json
@@ -7,14 +7,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:electron": "electron ./electron-app.js",
-    "build": "npm run build:ts && npm run build:vite && npm run build:electron",
+    "build": "npm run build:ts && npm run build:vite",
     "build:ts": "tsc",
     "build:vite": "vite build",
-    "build:electron": "npx electron-builder",
-    "buildStart": "electron .",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "tauri": "tauri"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
@@ -22,7 +20,6 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "constructs": "^10.3.0",
-    "electron-is-dev": "^2.0.0",
     "lucide-react": "^0.303.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -31,6 +28,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^1.5.9",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.43",
@@ -40,8 +38,6 @@
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "aws-cdk": "^2.117.0",
-    "electron": "^28.1.0",
-    "electron-builder": "^24.9.1",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
@@ -52,34 +48,5 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
-  },
-  "main": "./dist/electron-app.js",
-  "build": {
-    "extends": null,
-    "productName": "Bucket Builder",
-    "appId": "com.wuguishifu.bucket-store|bucket-builder",
-    "directories": {
-      "buildResources": "public",
-      "output": "./electron_build"
-    },
-    "extraResources": [
-      "./public/**/*"
-    ],
-    "extraMetadata": {
-      "main": "./dist/electron-app.js"
-    },
-    "win": {
-      "target": [
-        "nsis",
-        "msi"
-      ],
-      "icon": "./public/assets/icon.ico"
-    },
-    "files": [
-      "./dist/**/*",
-      "./node_modules/**/*",
-      "./package.json",
-      "./package-lock.json"
-    ]
   }
 }
