--- a/bucket-builder/package.json
+++ b/bucket-builder/package.json
@@ -6,7 +6,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "npm run tauri dev",
+    "dev:vite": "vite",
     "build": "npm run build:ts && npm run build:vite",
     "build:ts": "tsc",
     "build:vite": "vite build",
@@ -15,14 +16,18 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@fontsource/nunito": "^5.0.16",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tauri-apps/api": "^1.5.3",
     "aws-cdk-lib": "^2.117.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "constructs": "^10.3.0",
     "lucide-react": "^0.303.0",
+    "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sonner": "^1.3.1",
     "source-map-support": "^0.5.21",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
