--- a/bucket-builder/src-tauri/Cargo.toml
+++ b/bucket-builder/src-tauri/Cargo.toml
@@ -1,23 +1,23 @@
 [package]
-name = "Bucket Builder"
+name = "bucket-builder"
 version = "0.1.0"
 description = "Bucket Builder GUI Tool"
 authors = ["Bo Bramer"]
 license = ""
 repository = "https://github.com/wuguishifu/s3-frontend.git"
-default-run = "app"
+default-run = "bucket-builder"
 edition = "2021"
 rust-version = "1.60"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.5.1" }
+tauri-build = { version = "1.5.1", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.5.4" }
+tauri = { version = "1.5.4", features = [] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
