--- a/bucket-builder/package.json
+++ b/bucket-builder/package.json
@@ -16,8 +16,10 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@fontsource/cascadia-code": "^4.2.1",
     "@fontsource/nunito": "^5.0.16",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@tauri-apps/api": "^1.5.3",
     "aws-cdk-lib": "^2.117.0",
     "class-variance-authority": "^0.7.0",
@@ -27,6 +29,7 @@
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1",
     "sonner": "^1.3.1",
     "source-map-support": "^0.5.21",
     "tailwind-merge": "^2.2.0",
