--- a/bucket-builder/package.json
+++ b/bucket-builder/package.json
@@ -18,8 +18,16 @@
   "dependencies": {
     "@fontsource/cascadia-code": "^4.2.1",
     "@fontsource/nunito": "^5.0.16",
+    "@hookform/resolvers": "^3.3.3",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-table": "^8.11.3",
     "@tauri-apps/api": "^1.5.3",
     "aws-cdk-lib": "^2.117.0",
     "class-variance-authority": "^0.7.0",
@@ -29,11 +37,13 @@
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.21.1",
     "sonner": "^1.3.1",
     "source-map-support": "^0.5.21",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.9",
