--- a/backend/package.json
+++ b/backend/package.json
@@ -11,15 +11,18 @@
     "cdk": "cdk",
     "dev:synth": "cross-env STAGE=dev cdk synth --profile bo",
     "dev:deploy": "cross-env STAGE=dev cdk deploy --profile bo",
-    "dev": "npm run dev:synth --profile bo && npm run dev:deploy --profile bo",
+    "dev": "npm run dev:synth && npm run dev:deploy",
     "prod:synth": "cross-env STAGE=prod cdk synth --profile bo",
     "prod:deploy": "cross-env STAGE=prod cdk deploy --profile bo",
-    "prod": "npm run prod:synth --profile bo && npm run prod:deploy --profile bo"
+    "prod": "npm run prod:synth && npm run prod:deploy"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.131",
+    "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.8",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "20.9.1",
+    "@types/uuid": "^9.0.7",
     "aws-cdk": "2.113.0",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
@@ -29,9 +32,14 @@
   },
   "dependencies": {
     "@aws-sdk/client-apigatewaymanagementapi": "^3.485.0",
+    "@aws-sdk/client-dynamodb": "^3.485.0",
     "aws-cdk-lib": "2.113.0",
     "aws-lambda": "^1.0.7",
+    "bcryptjs": "^2.4.3",
     "constructs": "^10.0.0",
-    "source-map-support": "^0.5.21"
+    "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.2",
+    "source-map-support": "^0.5.21",
+    "uuid": "^9.0.1"
   }
 }
