--- a/website/package.json
+++ b/website/package.json
@@ -21,10 +21,13 @@
     "@tanstack/react-table": "^8.11.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cookie": "^0.6.0",
+    "http-proxy": "^1.18.1",
     "lucide-react": "^0.306.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-activity": "^2.1.3",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "sonner": "^1.3.1",
@@ -33,6 +36,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
+    "@types/http-proxy": "^1.17.14",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
