--- a/backend/package.json
+++ b/backend/package.json
@@ -19,14 +19,10 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.131",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cookie": "^0.6.0",
     "@types/jest": "^29.5.8",
-    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "20.9.1",
     "@types/uuid": "^9.0.7",
     "aws-cdk": "2.113.0",
-    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
@@ -37,12 +33,8 @@
     "@aws-sdk/client-dynamodb": "^3.485.0",
     "aws-cdk-lib": "2.113.0",
     "aws-lambda": "^1.0.7",
-    "bcryptjs": "^2.4.3",
     "constructs": "^10.0.0",
-    "cookie": "^0.6.0",
     "dotenv": "^16.3.1",
-    "jsonwebtoken": "^9.0.2",
-    "source-map-support": "^0.5.21",
-    "uuid": "^9.0.1"
+    "source-map-support": "^0.5.21"
   }
 }
